--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DriverSettingsActivity"></activity>
+        <activity android:name=".HistoryActivity"></activity>
+        <activity android:name=".DriverSettingsActivity" />
         <activity android:name=".CustomerMapActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
